# repltest

./: .envrc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  flake.nix  hack.py  instrument.py  myreadline.c  pyproject.toml  rltest.c
.github/workflows/: test.yaml
examples/: demo.py  drive.py  exiting.md  fgets.c  input  input.c  mismatch-diffs.md  read-stdin  timeouts.md  wrapping.md
nix/: devshell.nix  editable-venv.nix  formatting.nix  package.nix  seccomp-add-set_notify_fd.patch  test-repls.nix  uv-workspace.nix  uv2nix.nix
src/repl_driver/: __init__.py  analyze_syscall.py  repl_driver.py  repl_driver_test.py  seccomp_demo.py  syscall.py
src/repltest/: __init__.py  analyze_syscall.py  analyze_syscall_test.py  cli.py  cli_test.py  display.py  drive_repl.py  drive_repl_test.py  examples_test.py  exceptions.py  instrumented_child.py  repl_driver.py  repl_driver_test.py  spawn.py  timedelta_cli_type.py  timedelta_cli_type_test.py  util.py
test-repls/read-cooked/: default.nix  main.c
test-repls/readline-async/: default.nix  main.c
