[project]
name = "repltest"
version = "0.1.0"
description = "Python library for testing/driving REPLs. Sort of like `pexpect`, but without the waiting or regexes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyte>=0.8.2",
    "psutil>=7.0.0",
    "remote-pdb>=2.1.0",
    "seccomp>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = [
    # https://docs.pytest.org/en/stable/explanation/goodpractices.html#which-import-mode
    "--import-mode=importlib",
]
# Treat warnings as errors.
filterwarnings = [
    "error",
]

[tool.coverage.report]
show_missing = true
