[project]
name = "repltest"
version = "0.1.0"
description = "Python library for testing/driving REPLs. Sort of like `pexpect`, but without the waiting or regexes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "psutil>=7.0.0",
    "pyte>=0.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[project.scripts]
repltest = "repltest.cli:main"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = [
    # https://docs.pytest.org/en/stable/explanation/goodpractices.html#which-import-mode
    "--import-mode=importlib",
    "--cov=repltest",
]
# Treat warnings as errors.
filterwarnings = [
    "error",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
